--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "moment": "^2.22.2",
     "react-router-dom": "^4.3.1"
   }
 }
