--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "build": "^0.1.4",
+    "preact": "^8.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "moment": "^2.22.2",
+    "preact-cli": "^2.2.1",
     "react-router-dom": "^4.3.1"
   }
 }
